# ceia-analisis-matematico

./: AMIA_2024_TP_final_LDA_QDA.ipynb  pyproject.toml  tensors.ipynb
ejercicio_red_neuronal/: NN.ipynb  calculos_auxiliares.ipynb
