[tool.poetry]
name = "AMIA tp final"
version = "0.1.0"
description = ""
authors = ["leo centurion <centurionm.leo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
